# Claude-Skills-Manager

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
claude_skills_manager/: __init__.py  ai_tools.py  app_settings.py  claude_trust.py  logging_setup.py  models.py  recycle.py  scanner.py  skill_create.py  skill_introspect.py  skill_md.py  skill_relocate.py  skill_settings.py
claude_skills_manager/resources/: ai_tools.md
claude_skills_manager/ui/: _icons.py  _styles.py  about_dialog.py  ai_tool_dialog.py  app_icon.py  check_claude_dialog.py  code_editor.py  edit_resource_dialog.py  editor_panel.py  file_tree.py  image_dialog.py  main_window.py  new_skill_dialog.py  settings_dialog.py  skill_info_panel.py  skill_list.py  splash.py  syntax.py  test_dialog.py  win32_taskbar.py
